# TTPROv5

./: .dockerignore  .env  .env.example  .env.production  .gitignore  .railway-deploy  .trigger-deploy  .vercel-force  .vercelignore  ACCEPTANCE_TESTS.md  ALL_GREEN_REPORT.md  AUTHENTICATION_STATUS.md  CHECKPOINT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TEST.txt  DEPLOYMENT_TRIGGER.md  DEPLOY_TRIGGER.txt  DEVIN_CELERY_SERVICES_PROMPT.md  DEVIN_DEPLOYMENT_VERIFICATION_PROMPT.md  DEVIN_FINAL_BACKEND_SETUP.md  DEVIN_FINAL_COMPLETION.md  DEVIN_NEW_CHAT_DEPLOYMENT_PROMPT.md  DEVIN_RAILWAY_REBUILD_PROMPT.md  DEVIN_SECURITY_UPDATE_PROMPT.md  DEVIN_STRICT_DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  Dockerfile.minimal  Dockerfile.test  EMERGENCY_FIX_RAILWAY.md  EXACT_MISSING_VARIABLES.md  FIREBASE_SECRET_SETUP.md  FIREBASE_SECURITY_SETUP.md  FORCE_RAILWAY_DEPLOY.md  FRONTEND_DEPLOYMENT_COMPLETE.md  OAUTH_SETUP_GUIDE.md  (+81 more)
alembic/: env.py
app/: ab_test_routes.py  admin_routes.py  auth_dependencies.py  auth_manager.py  billing_routes.py  channel_routes.py  config.py  database.py  database_async.py  database_fallback.py  database_manager.py  database_utils.py  env_validator.py  firebase_auth.py  firebase_init.py  google_oauth_routes.py  health_check.py  job_manager.py  main.py  models.py  monitoring.py  oauth_refresh.py  oauth_routes.py  robust_tasks.py  settings.py  startup.py  store.py  stripe_webhook_manager.py  tasks.py  youtube_api.py  youtube_quota_manager.py
(+300 files in other folders)
